@@ -1,5 +1,7 @@
 package com.rsdp.service;
 
+import com.rsdp.security.SecurityOperatorContext;
+
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.rsdp.dto.request.FactoryCreateRequest;
 import com.rsdp.dto.request.FactoryLevelCapabilityUpdateRequest;
@@ -14,11 +16,13 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Propagation;
 import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.StringUtils;
 
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -45,7 +49,14 @@ public class FactoryService {
                 .eq("status", "active")
                 .orderByDesc("created_at")
         );
-        return factories.stream().map(this::toResponse).collect(Collectors.toList());
+        List<String> factoryCodes = factories.stream()
+            .map(FactoryMaster::getFactoryCode)
+            .distinct()
+            .toList();
+        Map<String, List<String>> capabilityMap = batchListCapableLevels(factoryCodes);
+        return factories.stream()
+            .map(f -> toResponse(f, capabilityMap))
+            .collect(Collectors.toList());
     }
 
     /**
@@ -98,7 +109,7 @@ public class FactoryService {
 
         saveCapabilities(factory.getFactoryCode(), primaryLevel, capableLevels);
 
-        auditLogService.logCreate("factory_master", factory.getFactoryCode(), factory, "admin");
+        auditLogService.logCreate("factory_master", factory.getFactoryCode(), factory, SecurityOperatorContext.currentUsername());
     }
 
     /**
@@ -125,7 +136,7 @@ public class FactoryService {
 
         syncPrimaryCapability(factoryCode, newLevel);
 
-        auditLogService.logUpdate("factory_master", factoryCode, oldSnapshot, factory, "admin");
+        auditLogService.logUpdate("factory_master", factoryCode, oldSnapshot, factory, SecurityOperatorContext.currentUsername());
     }
 
     /**
@@ -236,11 +247,16 @@ public class FactoryService {
     }
 
     private FactoryResponse toResponse(FactoryMaster factory) {
+        return toResponse(factory, Map.of());
+    }
+
+    private FactoryResponse toResponse(FactoryMaster factory,
+                                       Map<String, List<String>> capabilityMap) {
         FactoryResponse response = new FactoryResponse();
         response.setFactoryCode(factory.getFactoryCode());
         response.setFactoryName(factory.getFactoryName());
         response.setFactoryLevel(factory.getFactoryLevel());
-        response.setCapableLevels(listCapableLevels(factory.getFactoryCode()));
+        response.setCapableLevels(resolveCapableLevels(factory, capabilityMap));
         response.setHomeCommercialTag(factory.getHomeCommercialTag());
         response.setRegion(factory.getRegion());
         response.setAddress(factory.getAddress());
@@ -255,16 +271,48 @@ public class FactoryService {
         return response;
     }
 
+    private List<String> resolveCapableLevels(FactoryMaster factory,
+                                              Map<String, List<String>> capabilityMap) {
+        List<String> levels = capabilityMap.get(factory.getFactoryCode());
+        if (levels == null || levels.isEmpty()) {
+            return factory.getFactoryLevel() != null
+                ? List.of(factory.getFactoryLevel())
+                : List.of();
+        }
+        return sortLevels(levels);
+    }
+
+    private Map<String, List<String>> batchListCapableLevels(List<String> factoryCodes) {
+        if (factoryCodes.isEmpty()) {
+            return Map.of();
+        }
+        List<FactoryLevelCapability> capabilities = capabilityMapper.selectList(
+            new QueryWrapper<FactoryLevelCapability>()
+                .in("factory_code", factoryCodes)
+        );
+        return capabilities.stream()
+            .collect(Collectors.groupingBy(
+                FactoryLevelCapability::getFactoryCode,
+                Collectors.mapping(FactoryLevelCapability::getLevelCode, Collectors.toList())
+            ));
+    }
+
     /**
      * 查询工厂的能力等级列表。
      *
+     * <p>工厂不存在或已删除时返回空列表，由调用方决定如何处理；
+     * 避免一个缺失工厂导致整批查询/列表接口失败。</p>
+     *
      * @param factoryCode 工厂代码
-     * @return 能力等级代码列表
+     * @return 能力等级代码列表，不存在时返回空列表
      */
     public List<String> getFactoryCapableLevels(String factoryCode) {
+        if (!StringUtils.hasText(factoryCode)) {
+            return List.of();
+        }
         FactoryMaster factory = factoryMasterMapper.selectById(factoryCode);
         if (factory == null || factory.getDeletedAt() != null) {
-            throw new ResourceNotFoundException("工厂不存在: " + factoryCode);
+            return List.of();
         }
 
         List<String> levels = listCapableLevels(factoryCode);
@@ -333,9 +381,12 @@ public class FactoryService {
             .map(FactoryLevelCapability::getLevelCode)
             .distinct()
             .collect(Collectors.toList());
+        return sortLevels(levels);
+    }
 
-        // 按业务等级 S > A > B > C 排序，未定义的等级放末尾
-        levels.sort((a, b) -> {
+    private List<String> sortLevels(List<String> levels) {
+        List<String> sorted = new ArrayList<>(levels);
+        sorted.sort((a, b) -> {
             int idxA = LEVEL_ORDER.indexOf(a);
             int idxB = LEVEL_ORDER.indexOf(b);
             if (idxA >= 0 && idxB >= 0) {
@@ -343,6 +394,6 @@ public class FactoryService {
             }
             return idxA >= 0 ? -1 : (idxB >= 0 ? 1 : a.compareTo(b));
         });
-        return levels;
+        return sorted;
     }
 }
